--- a/get-started/key-concepts.mdx
+++ b/get-started/key-concepts.mdx
@@ -3,15 +3,37 @@ title: "Key Concepts"
 description: "Understanding the core components of Artemis Search"
 ---
 
-Artemis Search is built on several key concepts that enable powerful, reasoning-based searches. Understanding these concepts will help you make the most of our technology.
+## Overview
+
+Artemis Search is built on several interconnected components that work together to provide powerful, reasoning-based searches. The following diagram illustrates how these components relate to each other:
+
+<Accordion title="Artemis Search Component Relationship">
+  <Mermaid chart={`
+    graph TD
+      A[Organization] --> B[Project]
+      B --> C[Dataset]
+      B --> D[Machine]
+      B --> E[API Key]
+      C --> F[Embeddings]
+      C --> G[Tags]
+      B --> H[Playground]
+      H --> I[Search Query]
+      I --> J[Search Results]
+      D --> J
+      C --> J
+      E --> K[API Integration]
+      K --> J
+  `}/>
+</Accordion>
+
+This diagram shows the hierarchical structure of Artemis Search, from the organization level down to individual search queries and results. Let's explore each of these components in more detail.
 
 ## Intelligent Search
 
 <Accordion title="What makes our search 'intelligent'?">
   Artemis Search goes beyond traditional keyword matching or simple semantic similarity. Our technology excels at searches that require "reasoning," allowing it to understand and interpret complex queries in context.
 
-For example, when searching for "companies that require HIPAA compliance," our system doesn't just find companies related to medicine or HIPAA compliance. It actually reasons about which companies would be subject to HIPAA regulations based on their descriptions and activities.
-
+  For example, when searching for "companies that require HIPAA compliance," our system doesn't just find companies related to medicine or HIPAA compliance. It actually reasons about which companies would be subject to HIPAA regulations based on their descriptions and activities.
 </Accordion>
 
 ## Projects
@@ -25,8 +47,7 @@ Projects are the highest level of organization in Artemis Search. Each project i
   - One or more machines
   - Configuration settings (e.g., model type)
 
-Think of a project as a self-contained environment for a specific search use case.
-
+  Think of a project as a self-contained environment for a specific search use case.
 </Accordion>
 
 ## Datasets
@@ -38,8 +59,7 @@ Datasets are the foundation of your searches. They contain the information that 
   1. `embedding`: Contains OpenAI text-large-3 embeddings of the text you want to search through.
   2. `tag`: Contains string values associated with each embedding, which will be returned as the content associated with each search result.
 
-You can have multiple datasets in a project, but only one can be active at a time.
-
+  You can have multiple datasets in a project, but only one can be active at a time.
 </Accordion>
 
 ## Machines
@@ -47,10 +67,10 @@ You can have multiple datasets in a project, but only one can be active at a tim
 Machines are the computational resources that power your searches.
 
 <Accordion title="How do machines work?">
-	- Each machine runs our ML model on the active dataset when responding to
-	search requests. - You can have multiple machines per project for load
-	balancing. - At least one machine must be assigned to a project for it to be
-	active. - Requests are automatically load-balanced among available machines.
+  - Each machine runs our ML model on the active dataset when responding to search requests.
+  - You can have multiple machines per project for load balancing.
+  - At least one machine must be assigned to a project for it to be active.
+  - Requests are automatically load-balanced among available machines.
 </Accordion>
 
 ## Playground
@@ -58,10 +78,11 @@ Machines are the computational resources that power your searches.
 The playground is where you can experiment with and fine-tune your searches.
 
 <Accordion title="What can you do in the playground?">
-	In the playground, you can: - Select which project to experiment with -
-	Adjust search parameters like synthetic dataset size, probability threshold,
-	and top-K threshold - Enter search queries - View and analyze search results
-	in real-time
+  In the playground, you can:
+  - Select which project to experiment with
+  - Adjust search parameters like synthetic dataset size, probability threshold, and top-K threshold
+  - Enter search queries
+  - View and analyze search results in real-time
 </Accordion>
 
 ## Search Parameters
@@ -71,8 +92,7 @@ The playground is where you can experiment with and fine-tune your searches.
   - **Probability Threshold**: Filters results to keep only those above a certain probability of matching the search query.
   - **Top-K Threshold**: Limits the number of top results returned.
 
-Adjusting these parameters allows you to fine-tune the balance between search accuracy and performance.
-
+  Adjusting these parameters allows you to fine-tune the balance between search accuracy and performance.
 </Accordion>
 
 ## API Integration
@@ -84,8 +104,7 @@ Artemis Search provides a RESTful API for seamless integration with your applica
   - The main endpoint is `/search`, which accepts parameters like `search_query`, `num_batches`, `clear_flag`, and `top_k`.
   - API requests must include your API token in the Authorization header.
 
-For detailed API documentation, check out our [API Reference](/api-reference) section.
-
+  For detailed API documentation, check out our [API Reference](/api-reference) section.
 </Accordion>
 
 Understanding these key concepts will help you leverage the full power of Artemis Search in your projects. If you're ready to start building, head over to our [Quickstart Guide](/quickstart) to set up your first project.
