--- a/get-started/key-concepts.mdx
+++ b/get-started/key-concepts.mdx
@@ -22,7 +22,7 @@ Artemis Search is built on several interconnected components that work together 
         D
       end
       
-      subgraph DatasetPkl[Dataset (.pkl)]
+      subgraph DatasetPkl[Dataset pkl]
         F[Embeddings]
         G[Tags]
       end
